// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data-Driven RadioGroup 1`] = `
<div
  className="radio-group"
>
  <label
    className="radio-wrapper"
    style={undefined}
  >
    <span
      className="radio"
    >
      <input
        aria-hidden={true}
        checked={false}
        className="radio__input"
        disabled={undefined}
        name={undefined}
        onChange={[Function]}
        type="radio"
        value="basketball"
      />
      <span
        aria-checked={false}
        aria-disabled={undefined}
        className="radio__inner"
        role="radio"
      />
      <span>
        Basketball(with data)
      </span>
    </span>
  </label>
  <label
    className="radio-wrapper"
    style={undefined}
  >
    <span
      className="radio"
    >
      <input
        aria-hidden={true}
        checked={false}
        className="radio__input"
        disabled={undefined}
        name={undefined}
        onChange={[Function]}
        type="radio"
        value="tennis"
      />
      <span
        aria-checked={false}
        aria-disabled={undefined}
        className="radio__inner"
        role="radio"
      />
      <span>
        Tennis(with data)
      </span>
    </span>
  </label>
  <label
    className="radio-wrapper"
    style={undefined}
  >
    <span
      className="radio"
    >
      <input
        aria-hidden={true}
        checked={false}
        className="radio__input"
        disabled={undefined}
        name={undefined}
        onChange={[Function]}
        type="radio"
        value="swimming"
      />
      <span
        aria-checked={false}
        aria-disabled={undefined}
        className="radio__inner"
        role="radio"
      />
      <span>
        Swimming(with data)
      </span>
    </span>
  </label>
</div>
`;

exports[`should render right thing and don't change unexpected 1`] = `
<div
  className="radio-group"
>
  <label
    className="radio-wrapper"
    style={undefined}
  >
    <span
      className="radio"
    >
      <input
        aria-hidden={true}
        checked={false}
        className="radio__input"
        disabled={undefined}
        name={undefined}
        onChange={[Function]}
        type="radio"
        value="basketball"
      />
      <span
        aria-checked={false}
        aria-disabled={undefined}
        className="radio__inner"
        role="radio"
      />
      <span>
        Basketball
      </span>
    </span>
  </label>
  <label
    className="radio-wrapper"
    style={undefined}
  >
    <span
      className="radio radio--checked"
    >
      <input
        aria-hidden={true}
        checked={true}
        className="radio__input"
        disabled={undefined}
        name={undefined}
        onChange={[Function]}
        type="radio"
        value="tennis"
      />
      <span
        aria-checked={true}
        aria-disabled={undefined}
        className="radio__inner"
        role="radio"
      />
      <span>
        Tennis
      </span>
    </span>
  </label>
  <label
    className="radio-wrapper"
    style={undefined}
  >
    <span
      className="radio"
    >
      <input
        aria-hidden={true}
        checked={false}
        className="radio__input"
        disabled={undefined}
        name={undefined}
        onChange={[Function]}
        type="radio"
        value="swimming"
      />
      <span
        aria-checked={false}
        aria-disabled={undefined}
        className="radio__inner"
        role="radio"
      />
      <span>
        Swimming
      </span>
    </span>
  </label>
  <button />
</div>
`;
